# Rust-Simple-DNN

./: .gitignore  Cargo.toml  README.md  network_weights.json
benches/: layerBenchmarks.rs
examples/saveLoadModel/: Cargo.toml  main.rs
examples/xor/: Cargo.toml  main.rs
src/: lib.rs  rdnn.rs
src/rdnn/layers/: Conv.rs  Conv2D.rs  FC.rs  GenericLayer.rs  GenericLayerTrait.rs  Identity.rs  Input.rs  LeakyRelu.rs  Relu.rs  Sig.rs  Sigmoid.rs  Tanh.rs  mod.rs
tests/: activationFunctionTests.rs  convTest.rs
