[package]
name = "Rust_Simple_DNN"
version = "0.1.6"
edition = "2024"
description = "A crate for making optimized modular neural networks in rust"
readme = "README.md"
repository = "https://github.com/TrevorBlythe/Rusty-DNN"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
