[package]
name = "Rust_Simple_DNN"
version = "0.1.7"
edition = "2024"
description = "A crate for making optimized modular neural networks in rust"
readme = "README.md"
repository = "https://github.com/TrevorBlythe/Rusty-DNN"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "layerBenchmarks"
harness = false

#this is here to make critieron library work
[lib]
bench = false

[dependencies]
rand = "0.9.0"

